# deathclock

./: .gitignore  README.MD  README.md  feeds.txt  main.qml  pyproject.toml  rxconfig.py  shell.nix
assets/: styles.css
deathclock/: .gitignore  alarm.py  alarm_module.py  app.py  clock_module.py  deathclock.py  main.py  news.py  news_module.py  scores.py  scores_module.py  weather.py  weather_module.py
deathclock/assets/: style.css
rust/: Cargo.toml
rust/src/: main.rs  sports.rs
rustclock/: Cargo.toml  README.md  heaptrack.rustclock.84981.zst  heaptrack.rustclock.86896.zst
rustclock/i18n/en/: rustclock.ftl
rustclock/resources/: app.desktop  app.metainfo.xml
rustclock/src/: alarm.rs  app.rs  config.rs  i18n.rs  main.rs  news.rs  panes.rs  sports.rs  weather.rs
rustclock/src/files/: mlb_logos.json  nba_logos.json
tests/: test_deathclock.py
utils/: alarm.py  news.py  radio.py  scores.py  weather.py
utils/python_rd5807m/: radio.py
