[tool.poetry]
name = "deathclock"
version = "0.1.0"
description = ""
authors = ["Death916 <tavn1992@gmail.com>"]

[tool.poetry.dependencies]
python =  ">=3.8,<3.11.4"
pyside6 = "^6.6.1"
requests = "^2.31.0"
selenium = "^4.16.0"
feedparser = "^6.0.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
