[project]
name = "deathclock"
version = "0.1.0"
description = ""
authors = [{ name = "Death916", email = "tavn1992@gmail.com" }]
requires-python = ">=3.9,<3.11.4"
dependencies = [
    "pyside6>=6.6.1,<7",
    "requests>=2.31.0,<3",
    "selenium>=4.16.0,<5",
    "feedparser>=6.0.11,<7",
    "rich>=13.7.1,<14",
    "dash>=2.18.2,<3",
    "nba-api>=1.6.1,<2",
    "playwright>=1.49.1,<2",
    "aiofiles>=24.1.0",
    "aiohttp>=3.11.13",
]

[dependency-groups]
dev = ["pytest~=5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
