[project]
name = "deathclock"
version = "0.1.0"
description = ""
authors = [{ name = "Death916", email = "tavn1992@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0,<3",
    "feedparser>=6.0.11,<7",
    "rich>=13.7.1,<14",
    "dash>=2.18.2,<3",
    "nba-api>=1.6.1,<2",
    "playwright>=1.49.1,<2",
    "aiofiles>=24.1.0",
    "mlb-statsapi>=1.8.1",
    "reflex>=0.6.8",
    "aiohttp>=3.11.18",
]

[dependency-groups]
dev = ["pytest~=5.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
