[package]
name = "rustclock"
version = "0.2.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
iced = { version = "0.14.0", features = ["image", "tokio"] }
iced_webview_v2 = { version = "0.1.8", default-features = false, features = ["cef"] }
reqwest = "0.13.2"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
ureq = "3.2.0"
